# moesif-envoy-wasm-plugin

./: .gitmodules  Cargo-exporc-build.dockerfile  README-Solo.io-Gloo-Gateway.md
debug/: README.md  commands.txt  moesif-exproc-plugin:.env
debug/simple-rust-app/: Cargo.toml  Dockerfile  build.new  build.rs.proto  compile_output.txt  download_protos.sh
debug/simple-rust-app/src/: config.rs  converter.rs  grpc_service.rs  http_callback.rs  main.rs  message_processor.rs  root_context.rs  utils.rs
debug/simple-rust-app/src/proto/: envoy.config.core.v3.rs  envoy.extensions.filters.http.ext_proc.v3.rs  envoy.r#type.v3.rs  envoy.service.ext_proc.v3.rs  validate.rs  xds.core.v3.rs
examples/exproc/: exproc_for_gloo_deployment.yaml  exproc_k8s copy.yaml  exproc_k8s.yaml  extproc-server.yaml  publish_exproc_docker.sh
examples/istio/: echo-service.yaml  moesif-wasm-plugin.yaml
moesif-exproc/: .gitmodules  Cargo.toml  Dockerfile  build.rs
moesif-exproc-1/: Cargo.toml
moesif-exproc-1/src/: main.rs
moesif-exproc/src/: config.rs  event.rs  grpc_service.rs  http_callback.rs  http_context.rs  lib.rs  main.rs  root_context.rs  rules.rs  update_manager.rs  utils.rs
