[package]
name = "moesif_envoy_exproc_plugin"
version = "0.0.2"
edition = "2021"

[[bin]]
name = "moesif_envoy_exproc_plugin"
path = "main.rs"


[dependencies]
prost = "0.11"
prost-types = "0.11"
tonic = "0.8"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1.16" }
h2 = { version = "0.3" }


[build-dependencies]
prost-build = "0.11"
tonic-build = "0.8"

[lib]
name = "envoy_ext_proc_proto"
doctest = false