[package]
name = "moesif-exproc-plugin"
version = "0.2.43"
edition = "2021"

[dependencies]
chrono = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
prost = "0.8"
prost-types = "0.8"
tonic = { version = "0.5", features = ["transport"] }
tokio-stream = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
bytes = "1.0"
regex = "1.5"
tokio = { version = "1", features = ["full"] }


[build-dependencies]
tonic-build = "0.5"
